# tiny-transport

./: CMakeLists.txt  LICENSE  README.md
examples/channel/: CMakeLists.txt  main.cpp
examples/route/: main.cpp
include/ipc/: buffer.h  callback.h  def.h  ipc.h
include/transport/: ReceiverResource.h  SenderResource.h  SocketTransportDescriptor.h  TransportDescriptorInterface.h  TransportFactory.h  TransportInterface.h  config.h  export.h  type.h
src/: CMakeLists.txt  IPFinder.cpp  IPFinder.h  IPLocator.cpp  IPLocator.h  PortParameters.hpp  TransportDescriptorInterface.cpp  TransportFactory.cpp  buffer.cpp  choose.hpp  description.cpp  description.h  handle.cpp  handle.h  ipc.cpp  message.hpp  queue.hpp  resource.hpp
src/core/: cache.hpp  connection.cpp  connection.h  content.cpp  content.h  head.hpp  segment.hpp
src/sync/: condition.cpp  condition.h  guard.h  mutex.cpp  mutex.h  spinlock.h  waiter.cpp  waiter.h
src/tcp/: TCPReceiverResource.cpp  TCPReceiverResource.h
src/udp/: UDPReceiverResource.cpp  UDPReceiverResource.h  UDPSenderResource.hpp  UDPTransportDescriptor.h  UDPTransportInterface.cpp  UDPTransportInterface.h  UDPv4Transport.cpp  UDPv4Transport.h  UDPv4TransportDescriptor.h  UDPv6Transport.cpp  UDPv6Transport.h  UDPv6TransportDescriptor.h
test/: CMakeLists.txt  test_thread_utility.cpp
